--- a/test/test.html
+++ b/test/test.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Qunit单元测试</title><link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css"></head><body><div id="qunit"></div><div id="qunit-fixture"></div><!-- 框架--><script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script><!-- 公用组件 --><script src="http://seajs.org/dist/sea.js"></script><!-- 启动代码--><script src="test.js"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Qunit Unit test</title><link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css"></head><body><div id="qunit"></div><div id="qunit-fixture"></div><script src="../bower_components/qunit/qunit/qunit.js"></script><script src="../bower_components/requirejs/require.js"></script><script>requirejs.config({
+    baseUrl: '../',
+    paths: {
+        jquery: 'bower_components/jquery/dist/jquery'
+    }
+})
+require(['test/test'], function () {
+    // do nothing
+})</script></body></html>
